Changed the coord encoding to be an integer rather than a string (more efficient).

--- a/TwoNotTouch.html
+++ b/TwoNotTouch.html
@@ -20,13 +20,12 @@ class SolutionFound extends Error {
 	// So... catching this "Error" means success ;)
 }
 
-// Sadly, Javascirpt cannot use arrays as keys (unless the array is the same object).
-// For this reason, we have to convert coordinates to strings and back again so we
-// can look them up efficiently.
-function to_coord( r, c ) { return r + ',' + c; }
-function from_coord( coord ) { return coord.split(',').map( x => parseInt(x,10) ); }
+// Sadly, Javascirpt cannot use arrays as keys (well, unless the array is the same object).
+// For this reason, we encode coordinates to integers, which will work in Map and Set.
+function to_coord( r, c ) { return (r<<16) | c; }
+function from_coord( coord ) { return [coord>>16, coord&0xFFFF]; }
 
-// List of all 9 cell offsets from a given cell (includes origin).
+// List of all 9 cell offsets (includes origin).
 const i_adjacent = [[0,0], [1,0], [-1,0], [0,1], [0,-1], [1,1], [-1,1], [1,-1], [-1,-1]];
 
 class TwoNotTouch {
@@ -37,16 +36,18 @@ class TwoNotTouch {
 	}
 	
 	set_problem() {
-		this.regions = new Map();
+		this.regions = new Map();			// Regions.
 		this.regions_grid = new Array();	// 2-d array with all key/regions pairs.
 		this.star_count = new Map();		// number of stars per region.
-		let table = document.getElementById('twonottouch_table_id');
 		
 		// Add the regions from the html.
+		let table = document.getElementById('twonottouch_table_id');
 		for ( let r = 0, n = table.rows.length; r < n; r++) {
 			let regions_row = new Array( table.rows.length );
 			for ( let c = 0, m = table.rows[r].cells.length; c < m; c++ ) {
-				const v = table.rows[r].cells[c].firstChild.value.trim();
+				let v = table.rows[r].cells[c].firstChild.value.trim();
+				if( !v )
+					v = '+';
 				table.rows[r].cells[c].firstChild.value = v;
 				
 				if( !this.regions.has(v) ) {
@@ -215,7 +216,7 @@ class TwoNotTouch {
 			ctx.beginPath(); ctx.moveTo( ...xy(i, 0) ); ctx.lineTo( ...xy(i, grid_size) ); ctx.stroke();
 		}
 
-		// Draw the border.
+		// Draw the grid border.
 		ctx.lineWidth = frame_size / 60;
 		ctx.strokeStyle = '#000000';
 		ctx.beginPath();
@@ -226,8 +227,9 @@ class TwoNotTouch {
 		ctx.closePath();
 		ctx.stroke()
 		
-		// Draw the regions
-		let edge_map = new Map();
+		// Draw the region edges.
+		// Add the edges of all regions to an edge map.
+		let edge_map = new Map();		
 		function add_edge( r1, c1, r2, c2, dk ) {
 			const key = [r1, c1, r2, c2].join( ',' );
 			if( !edge_map.has(key) )
@@ -236,6 +238,7 @@ class TwoNotTouch {
 		}
 		
 		let table = document.getElementById('twonottouch_table_id');
+		
 		for ( let r = 0, n = table.rows.length; r < n; r++) {
 			for ( let c = 0, m = table.rows[r].cells.length; c < m; c++ ) {
 				const v = table.rows[r].cells[c].firstChild.value.trim();
@@ -247,9 +250,10 @@ class TwoNotTouch {
 		}
 		
 		const radius = ctx.lineWidth / 2;
-		for( const [k,v] of edge_map.entries() ) {
-			if( v.size > 1 ) {
-				const [r1, c1, r2, c2] = k.split(',').map( x => { return parseInt(x, 10); } );
+		for( const [edge,regions] of edge_map.entries() ) {
+			// Draw the edge only if it is shared between regions.
+			if( regions.size != 1 ) {
+				const [r1, c1, r2, c2] = edge.split(',').map( x => { return parseInt(x, 10); } );
 				ctx.beginPath();
 				ctx.moveTo( ...xy(r1,c1) );
 				ctx.lineTo( ...xy(r2,c2) ); 
